--- a/app/src/main/res/layout/activity_new_review.xml
+++ b/app/src/main/res/layout/activity_new_review.xml
@@ -57,4 +57,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleText"/>
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="new Review"
+        android:onClick="newReview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleText"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
