--- a/app/src/main/res/layout/activity_view_reviews.xml
+++ b/app/src/main/res/layout/activity_view_reviews.xml
@@ -4,27 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ViewReviews">
 
-    <Button
-        android:id="@+id/button"
+    <TextView
+        android:id="@+id/reviewList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create_new_review"
-        android:onClick="startNewReview"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="347dp"
+        android:layout_marginEnd="185dp"
+        android:layout_marginBottom="365dp"
+        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="viewReviews"
-        android:text="View reviews"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
