--- a/app/src/main/res/layout/activity_view_reviews.xml
+++ b/app/src/main/res/layout/activity_view_reviews.xml
@@ -6,17 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ViewReviews">
 
-    <TextView
-        android:id="@+id/reviewList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="347dp"
-        android:layout_marginEnd="185dp"
-        android:layout_marginBottom="365dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reviewsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
