--- a/app/src/main/res/layout/activity_create_new_review.xml
+++ b/app/src/main/res/layout/activity_create_new_review.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreateNewReview"
-    android:padding="10dp">
+    >
 
     <Button
         android:id="@+id/saveReview"
@@ -40,13 +40,13 @@
         app:layout_constraintTop_toBottomOf="@+id/titleTextNewReview" />
 
     <RatingBar
-        android:contentDescription="rate the book out of 5"
         android:id="@+id/ratingBar"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
+        android:contentDescription="rate the book out of 5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/authorTextNewReview" />
 
@@ -64,6 +64,8 @@
             android:id="@+id/reviewText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
             android:hint="Type your review" />
     </com.google.android.material.textfield.TextInputLayout>
 
