--- a/app/src/main/res/layout/activity_edit_review.xml
+++ b/app/src/main/res/layout/activity_edit_review.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     tools:context=".EditReview">
 
 
@@ -18,6 +19,7 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        android:theme="@style/Button.greyTint"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
@@ -41,34 +43,27 @@
         android:id="@+id/authorEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="336dp"
-        android:layout_marginBottom="696dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/titleEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="336dp"
-        android:layout_marginBottom="664dp"
+        android:layout_marginTop="10dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/authorEdit" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="94dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="346dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleEdit">
+        app:layout_constraintTop_toBottomOf="@+id/editRating">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editReview"
@@ -76,21 +71,17 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
-            android:hint="hint" />
+            android:hint="Edit review" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <RatingBar
         android:id="@+id/editRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginTop="20dp"
         android:contentDescription="edit previously saved rating"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleEdit"
-        app:layout_constraintVertical_bias="0.214" />
+        app:layout_constraintTop_toBottomOf="@+id/titleEdit" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -110,23 +101,28 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
+            android:layout_marginBottom="10sp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/contactShare"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10sp"
                 android:layout_weight="1"
                 android:onClick="smsShare"
-                android:text="Share with sms" />
+                android:text="Share with sms"
+                android:theme="@style/Button.greyTint" />
 
             <Button
                 android:id="@+id/qrShare"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10sp"
                 android:layout_weight="1"
                 android:onClick="qrCodeShare"
-                android:text="Qr share" />
+                android:text="Qr share"
+                android:theme="@style/Button.greyTint" />
         </LinearLayout>
 
         <LinearLayout
@@ -138,19 +134,23 @@
 
             <Button
                 android:id="@+id/saveChanges"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10sp"
                 android:layout_weight="1"
                 android:onClick="saveChanges"
-                android:text="Save" />
+                android:text="Save"
+                android:theme="@style/Button.greyTint" />
 
             <Button
                 android:id="@+id/deleteReview"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10sp"
                 android:layout_weight="1"
                 android:onClick="deleteReview"
-                android:text="delete" />
+                android:text="delete"
+                android:theme="@style/Button.greyTint" />
 
 
         </LinearLayout>
