--- a/app/src/main/res/layout/activity_create_new_review.xml
+++ b/app/src/main/res/layout/activity_create_new_review.xml
@@ -49,8 +49,9 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="80dp"
+        app:layout_constraintBottom_toTopOf="@+id/saveReview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar">
