--- a/app/src/main/res/layout/activity_edit_review.xml
+++ b/app/src/main/res/layout/activity_edit_review.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="5dp"
         android:elevation="10dp"
         android:onClick="hideQr"
-        android:text="Hide qr code"
+        android:text="@string/hide_qr_code"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,8 +27,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:background="#888888"
-        android:contentDescription="scan the qr code to display the review"
+        android:background="#ffffff"
+        android:contentDescription="@string/scan_the_qr_code_to_display_the_review"
         android:elevation="1dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_launcher_foreground"
@@ -59,8 +59,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/hideQr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editRating">
@@ -68,8 +69,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editReview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Edit review" />
+            android:layout_height="match_parent"
+            android:hint="@string/edit_review" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <RatingBar
@@ -77,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:contentDescription="edit previously saved rating"
+        android:contentDescription="@string/edit_saved_rating"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleEdit" />
 
@@ -96,7 +97,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
             android:layout_marginBottom="10sp"
@@ -105,27 +106,27 @@
             <Button
                 android:id="@+id/contactShare"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginRight="10sp"
                 android:layout_weight="1"
                 android:onClick="smsShare"
-                android:text="Share with sms"
+                android:text="@string/share_with_sms"
                 android:theme="@style/Button.greyTint" />
 
             <Button
                 android:id="@+id/qrShare"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10sp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:onClick="qrCodeShare"
-                android:text="Qr share"
+                android:text="@string/qr_share"
                 android:theme="@style/Button.greyTint" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
             android:orientation="horizontal">
@@ -133,7 +134,7 @@
             <Button
                 android:id="@+id/saveChanges"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginRight="10sp"
                 android:layout_weight="1"
                 android:onClick="saveChanges"
@@ -143,7 +144,7 @@
             <Button
                 android:id="@+id/deleteReview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="10sp"
                 android:layout_weight="1"
                 android:onClick="deleteReview"
