--- a/app/src/main/res/layout/activity_create_new_review.xml
+++ b/app/src/main/res/layout/activity_create_new_review.xml
@@ -12,12 +12,12 @@
         android:id="@+id/saveReview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="30dp"
         android:onClick="createReview"
         android:text="save"
         android:theme="@style/Button.greyTint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
     <TextView
         android:id="@+id/titleTextNewReview"
@@ -48,10 +48,10 @@
         app:layout_constraintTop_toBottomOf="@+id/authorTextNewReview" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintBottom_toTopOf="@+id/saveReview"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar">
