--- a/app/src/main/res/layout-land/activity_create_new_review.xml
+++ b/app/src/main/res/layout-land/activity_create_new_review.xml
@@ -12,12 +12,13 @@
         android:id="@+id/saveReview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:onClick="createReview"
         android:text="save"
         android:theme="@style/Button.greyTint"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        app:layout_constraintStart_toEndOf="@+id/ratingBar"
+        app:layout_constraintTop_toBottomOf="@+id/authorTextNewReview" />
 
     <TextView
         android:id="@+id/titleTextNewReview"
