--- a/app/src/main/res/layout/activity_edit_review.xml
+++ b/app/src/main/res/layout/activity_edit_review.xml
@@ -63,13 +63,14 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp">
+                android:layout_height="200dp"
+                android:layout_marginTop="30dp"
+                app:layout_constraintHeight_max="200dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editReview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:hint="@string/edit_review" />
             </com.google.android.material.textfield.TextInputLayout>
 
